# allocation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  allocation.tex  requirements.txt
code/: CMakeLists.txt  buffer_sizes.h  create_graphs.sh  graph.py  graph_hist.py  graph_radar.py  light.c  light.cpp  light.h  mal.c  mal.cpp  mal.res  mal_s.c  mal_s.cpp  mal_s.res  run_tests.sh  sporadic.c  sporadic.cpp  sporadic.h  sta.c  sta.cpp  sta.res  sta_s.c  sta_s.cpp
docs/: CMakeLists.txt  allocation.tex
